--- a/gettext-runtime/intl/configure.ac
+++ b/gettext-runtime/intl/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-runtime directory of GNU gettext
-dnl Copyright (C) 1995-2016, 2018-2023 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2023 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -102,7 +102,59 @@ AM_CONDITIONAL([PRELOADABLE_LIBINTL],
 dnl Checks for header files, functions and declarations.
 gl_INIT
 
-gt_INTL_SUBDIR_CORE
+dnl Checks for the core files of the intl subdirectory:
+dnl   dcigettext.c
+dnl   eval-plural.h
+dnl   explodename.c
+dnl   finddomain.c
+dnl   gettextP.h
+dnl   gmo.h
+dnl   hash-string.h hash-string.c
+dnl   l10nflist.c
+dnl   libgnuintl.h.in (except the *printf stuff)
+dnl   loadinfo.h
+dnl   loadmsgcat.c
+dnl   localealias.c
+dnl   log.c
+dnl   plural-exp.h plural-exp.c
+dnl   plural.y
+AC_C_INLINE
+AC_TYPE_SIZE_T
+gl_AC_HEADER_STDINT_H
+AC_FUNC_ALLOCA
+AC_FUNC_MMAP
+gt_INTDIV0
+gl_LOCK
+
+AC_LINK_IFELSE(
+  [AC_LANG_PROGRAM(
+     [[int foo (int a) { a = __builtin_expect (a, 10); return a == 10 ? 0 : 1; }]],
+     [[]])],
+  [AC_DEFINE([HAVE_BUILTIN_EXPECT], [1],
+     [Define to 1 if the compiler understands __builtin_expect.])])
+
+AC_CHECK_HEADERS([inttypes.h unistd.h sys/param.h])
+AC_CHECK_FUNCS([getcwd getegid geteuid getgid getuid mempcpy munmap \
+  stpcpy strcasecmp uselocale __fsetlocking])
+
+dnl Use the *_unlocked functions only if they are declared.
+dnl (because some of them were defined without being declared in Solaris
+dnl 2.5.1 but were removed in Solaris 2.6, whereas we want binaries built
+dnl on Solaris 2.5.1 to run on Solaris 2.6).
+AC_CHECK_DECLS([feof_unlocked, fgets_unlocked], , , [#include <stdio.h>])
+
+AM_ICONV
+
+dnl intl/plural.c is generated from intl/plural.y. It requires bison,
+dnl because plural.y uses bison specific features. It requires at least
+dnl bison-3.0 for %precedence.
+dnl bison is only needed for the maintainer (who touches plural.y). But in
+dnl order to avoid separate Makefiles or --enable-maintainer-mode, we put
+dnl the rule in general Makefile. Now, some people carelessly touch the
+dnl files or have a broken "make" program, hence the plural.c rule will
+dnl sometimes fire. To avoid an error, defines BISON to ":" if it is not
+dnl present or too old.
+gl_PROG_BISON([INTLBISON], [3.0])
 
 gl_PRINTF_POSITIONS
 case "$gl_cv_func_printf_positions" in
