build: Move a .m4 file to where it belongs.
* autogen.sh: Pass '-I m4' when generating gettext-runtime/intl/configure.
* gettext-runtime/intl/m4/intdiv0.m4: Moved here from
gettext-runtime/m4/intdiv0.m4.
* gettext-runtime/intl/Makefile.am (ACLOCAL_AMFLAGS): Add '-I m4'.
(EXTRA_DIST): Add m4/intdiv0.m4.
* gettext-runtime/m4/Makefile.am (EXTRA_DIST): Remove intdiv0.m4.

--- a/gettext-runtime/intl/Makefile.am
+++ b/gettext-runtime/intl/Makefile.am
@@ -18,11 +18,12 @@
 ## Process this file with automake to produce Makefile.in.
 
 AUTOMAKE_OPTIONS = 1.10 gnu no-dependencies
-ACLOCAL_AMFLAGS = -I ../../m4 -I ../m4 -I gnulib-m4
+ACLOCAL_AMFLAGS = -I ../../m4 -I ../m4 -I m4 -I gnulib-m4
 
 SUBDIRS = gnulib-lib
 
-EXTRA_DIST =
+EXTRA_DIST = \
+  m4/intdiv0.m4
 BUILT_SOURCES =
 MOSTLYCLEANFILES = core *.stackdump
 CLEANFILES =
