Recognize the *-*-windows* config triplets introduced on 2023-06-26.
* gettext-runtime/configure.ac: Treat windows* as equivalent to mingw*.
* gettext-runtime/intl/configure.ac: Likewise.
* gettext-runtime/libasprintf/configure.ac: Likewise.
* gettext-tools/configure.ac: Likewise.
* gettext-tools/m4/locale-de.m4 (gt_LOCALE_DE_UTF8): Likewise.
* libtextstyle/configure.ac: Likewise.
* m4/woe32-dll.m4 (gl_WOE32_DLL): Likewise.

--- a/gettext-runtime/libasprintf/configure.ac
+++ b/gettext-runtime/libasprintf/configure.ac
@@ -53,10 +53,10 @@ dnl Prepares the libtool configuration for handling of Windows resources, and
 dnl sets the RC variable to a program that compiles Windows resource files.
 LT_LANG([Windows Resource])
 
-dnl On mingw and Cygwin, we can activate special Makefile rules which add
-dnl version information to the shared libraries and executables.
+dnl On native Windows and Cygwin, we can activate special Makefile rules which
+dnl add version information to the shared libraries and executables.
 case "$host_os" in
-  mingw* | cygwin*) is_woe32=yes ;;
+  mingw* | windows* | cygwin*) is_woe32=yes ;;
   *) is_woe32=no ;;
 esac
 AM_CONDITIONAL([WOE32], [test $is_woe32 = yes])
@@ -64,7 +64,7 @@ AM_CONDITIONAL([WOE32], [test $is_woe32 = yes])
 case "$host_os" in
   # On Cygwin, without -no-undefined, a warning is emitted and only a static
   # library is built.
-  beos* | mingw* | cygwin* | os2*) LTNOUNDEF='-no-undefined' ;;
+  beos* | mingw* | windows* | cygwin* | os2*) LTNOUNDEF='-no-undefined' ;;
   *) LTNOUNDEF='' ;;
 esac
 AC_SUBST([LTNOUNDEF])
