--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -103,10 +103,10 @@ dnl Prepares the libtool configuration for handling of Windows resources, and
 dnl sets the RC variable to a program that compiles Windows resource files.
 LT_LANG([Windows Resource])
 
-dnl On mingw and Cygwin, we can activate special Makefile rules which add
-dnl version information to the shared libraries and executables.
+dnl On native Windows and Cygwin, we can activate special Makefile rules which
+dnl add version information to the shared libraries and executables.
 case "$host_os" in
-  mingw* | cygwin*) is_woe32=yes ;;
+  mingw* | windows* | cygwin*) is_woe32=yes ;;
   *) is_woe32=no ;;
 esac
 AM_CONDITIONAL([WOE32], [test $is_woe32 = yes])
@@ -124,7 +124,7 @@ AM_CONDITIONAL([OS2], [test $special_makefile_rules = os2])
 
 dnl Some code is only meant to be compiled on native Windows.
 case "$host_os" in
-  mingw*) is_windows_native=yes ;;
+  mingw* | windows*) is_windows_native=yes ;;
   *) is_windows_native=no ;;
 esac
 AM_CONDITIONAL([WINDOWS_NATIVE], [test $is_windows_native = yes])
@@ -257,13 +257,14 @@ gt_PREREQ_HOSTNAME
 
 dnl Parameterization of the 'libxml' module:
 dnl When INCLUDED_LIBXML is true and building static libraries, tell
-dnl libxml's xmlexports.h to omit '__declspec(dllimport)' on mingw and Cygwin.
+dnl libxml's xmlexports.h to omit '__declspec(dllimport)' on Windows.
 if test "$gl_cv_libxml_use_included" = yes && test "$enable_shared" != yes; then
   AC_DEFINE([LIBXML_STATIC], [1],
     [Define if libxml is being used as a static library.])
 fi
 
-dnl Compilation on mingw and Cygwin needs special Makefile rules, because
+dnl Compilation on native Windows and Cygwin needs special Makefile rules,
+dnl because
 dnl 1. when we install a shared library, we must arrange to export
 dnl    auxiliary pointer variables for every exported variable,
 dnl 2. when we install a shared library and a static library simultaneously,
@@ -272,7 +273,7 @@ dnl    must arrange to define the auxiliary pointer variables for the
 dnl    exported variables _also_ in the static library.
 if test "$enable_shared" = yes; then
   case "$host_os" in
-    mingw* | cygwin*) is_woe32dll=yes ;;
+    mingw* | windows* | cygwin*) is_woe32dll=yes ;;
     *) is_woe32dll=no ;;
   esac
 else
@@ -281,7 +282,7 @@ fi
 AM_CONDITIONAL([WOE32DLL], [test $is_woe32dll = yes])
 if test $is_woe32dll = yes; then
   AC_DEFINE([WOE32DLL], [1],
-    [Define when --enable-shared is used on mingw or Cygwin.])
+    [Define when --enable-shared is used on Windows.])
 fi
 
 GETTEXTLIB_EXPORTS_FLAGS=
