Recognize the *-*-windows* config triplets introduced on 2023-06-26.
* libtextstyle/lib/Makefile.am: Treat windows* as equivalent to mingw*.

--- a/libtextstyle/lib/Makefile.am
+++ b/libtextstyle/lib/Makefile.am
@@ -186,7 +186,7 @@ EXTRA_DIST           += libtextstyle.sym.in declared.sh
 libtextstyle.sym : $(srcdir)/libtextstyle.sym.in
 	cat $(srcdir)/libtextstyle.sym.in \
 	  | case "@host_os@" in \
-	      mingw*) cat ;; \
+	      mingw* | windows*) cat ;; \
 	      *) grep -v '^libtextstyle_isatty$$' ;; \
 	    esac \
 	  > $@-t
@@ -217,7 +217,7 @@ config.h: $(BUILT_SOURCES) libtextstyle.sym
 	  echo; \
 	  echo '#endif /* LIBTEXTSTYLE_CONFIG_H */'; \
 	  case "@host_os@" in \
-	    mingw*) echo '#define isatty libtextstyle_isatty' ;; \
+	    mingw* | windows*) echo '#define isatty libtextstyle_isatty' ;; \
 	  esac; \
 	} > config.h && \
 	if test -n "$(NAMESPACING)" && test -n "$(HAVE_GLOBAL_SYMBOL_PIPE)"; then \
