Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@
 /gettext-tools/libgettextpo/c-strstr.c
 /gettext-tools/libgettextpo/c-strstr.h
 /gettext-tools/libgettextpo/c++defs.h
+/gettext-tools/libgettextpo/c32is-impl.h
+/gettext-tools/libgettextpo/c32iscntrl.c
+/gettext-tools/libgettextpo/c32width.c
 /gettext-tools/libgettextpo/calloc.c
 /gettext-tools/libgettextpo/cloexec.c
 /gettext-tools/libgettextpo/cloexec.h
@@ -165,12 +168,14 @@
 /gettext-tools/libgettextpo/malloca.h
 /gettext-tools/libgettextpo/markup.c
 /gettext-tools/libgettextpo/markup.h
+/gettext-tools/libgettextpo/mbrtoc32.c
 /gettext-tools/libgettextpo/mbrtowc.c
 /gettext-tools/libgettextpo/mbrtowc-impl.h
 /gettext-tools/libgettextpo/mbrtowc-impl-utf8.h
 /gettext-tools/libgettextpo/mbsinit.c
 /gettext-tools/libgettextpo/mbswidth.c
 /gettext-tools/libgettextpo/mbswidth.h
+/gettext-tools/libgettextpo/mbszero.c
 /gettext-tools/libgettextpo/mbtowc-lock.c
 /gettext-tools/libgettextpo/mbtowc-lock.h
 /gettext-tools/libgettextpo/mem-hash-map.c
@@ -254,6 +259,7 @@
 /gettext-tools/libgettextpo/sys_types.in.h
 /gettext-tools/libgettextpo/textstyle.in.h
 /gettext-tools/libgettextpo/time.in.h
+/gettext-tools/libgettextpo/uchar.in.h
 /gettext-tools/libgettextpo/uniconv.in.h
 /gettext-tools/libgettextpo/unictype.in.h
 /gettext-tools/libgettextpo/unilbrk.in.h
@@ -316,12 +322,19 @@
 /gettext-tools/libgrep/intprops-internal.h
 /gettext-tools/libgrep/intprops.h
 /gettext-tools/libgrep/inttypes.in.h
+/gettext-tools/libgrep/iswblank.c
+/gettext-tools/libgrep/iswctype-impl.h
+/gettext-tools/libgrep/iswctype.c
+/gettext-tools/libgrep/iswdigit.c
+/gettext-tools/libgrep/iswpunct.c
+/gettext-tools/libgrep/iswxdigit.c
 /gettext-tools/libgrep/langinfo.in.h
 /gettext-tools/libgrep/libc-config.h
 /gettext-tools/libgrep/limits.in.h
 /gettext-tools/libgrep/locale.in.h
 /gettext-tools/libgrep/localeconv.c
 /gettext-tools/libgrep/mbrlen.c
+/gettext-tools/libgrep/mbszero.c
 /gettext-tools/libgrep/mbtowc-impl.h
 /gettext-tools/libgrep/mbtowc.c
 /gettext-tools/libgrep/nl_langinfo.c
@@ -343,6 +356,8 @@
 /gettext-tools/libgrep/warn-on-use.h
 /gettext-tools/libgrep/wchar.in.h
 /gettext-tools/libgrep/wctype-h.c
+/gettext-tools/libgrep/wctype-impl.h
+/gettext-tools/libgrep/wctype.c
 /gettext-tools/libgrep/wctype.in.h
 /gettext-tools/libgrep/windows-initguard.h
 /gettext-tools/libgrep/wcrtomb.c
@@ -869,6 +884,7 @@ core
 /gettext-tools/libgettextpo/sys/types.h
 /gettext-tools/libgettextpo/textstyle.h
 /gettext-tools/libgettextpo/time.h
+/gettext-tools/libgettextpo/uchar.h
 /gettext-tools/libgettextpo/uniconv.h
 /gettext-tools/libgettextpo/unictype.h
 /gettext-tools/libgettextpo/unilbrk.h
