intl: Don't export the symbol 'mbszero' on Windows platforms.
* gettext-runtime/intl/configure.ac: Define mbszero to _libintl_mbszero.

--- a/gettext-runtime/intl/configure.ac
+++ b/gettext-runtime/intl/configure.ac
@@ -340,6 +340,8 @@ AH_VERBATIM([znoexport], [
 #define glthread_recursive_lock_destroy_multithreaded _libintl_recursive_lock_destroy_multithreaded
 #define glthread_once_singlethreaded                  _libintl_once_singlethreaded
 #define glthread_once_multithreaded                   _libintl_once_multithreaded
+/* Symbols defined by gnulib module 'mbszero'.  */
+#define mbszero                    _libintl_mbszero
 /* Symbols defined by gnulib module 'printf-frexp'.  */
 #define printf_frexp               _libintl_printf_frexp
 /* Symbols defined by gnulib module 'printf-frexpl'.  */
