intl: Don't export the symbol 'rpl_isnanf' on MSVC.
* gettext-runtime/intl/configure.ac: Define rpl_isnanf to _libintl_isnanf.

--- a/gettext-runtime/intl/configure.ac
+++ b/gettext-runtime/intl/configure.ac
@@ -238,6 +238,8 @@ AH_VERBATIM([znoexport], [
 #define hard_locale                _libintl_hard_locale
 /* Symbols defined by gnulib module 'isnand-nolibm'.  */
 #define rpl_isnand                 _libintl_isnand
+/* Symbols defined by gnulib module 'isnanf-nolibm'.  */
+#define rpl_isnanf                 _libintl_isnanf
 /* Symbols defined by gnulib module 'isnanl-nolibm'.  */
 #define rpl_isnanl                 _libintl_isnanl
 /* Symbols defined by gnulib module 'localename'.  */
